<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_8dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_24dp"
        android:text="@string/welcomeText"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padding_24dp"
        android:text="@string/startButtonText"
        android:onClick="onClickStart"/>

    <TextView
        android:id="@+id/startCoutnBricksTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_24dp"
        android:text="@string/startCountBricksText"
        android:textAlignment="center" />

    <SeekBar
        android:id="@+id/startCountBricksSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_8dp"
        android:max="35"
        android:progress="0" />
</LinearLayout>